# fastapi-template

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  main.py  prerequisites.sh  pyproject.toml
app/config/: config.py
app/db/: dao.py  init.py  session.py
app/dependencies/: auth_dependency.py  config_dependency.py
app/errors/: auth_error.py  db_error.py
app/logging/: api_logger.py
app/models/: models.py
app/routers/: auth_router.py  user_router.py
app/schemas/: user_schema.py
app/service/: auth_service.py  user_service.py
app/utils/: init_celery.py  password_helper.py  response.py  security.py
backend/: Dockerfile  pyproject.toml  start_gunicorn.sh
backend/alembic/: env.py
backend/alembic/versions/: 3c2d9f412fc7_first_migration.py  b2c65ce21236_update_profile.py
backend/app/config/: config.py  gunicorn_start.sh
backend/app/db/: dao.py  session.py
backend/app/dependencies/: auth_dependency.py  config_dependency.py
backend/app/models/: models.py
backend/app/routers/: auth_router.py  user_router.py
backend/app/schemas/: user_schema.py
backend/app/service/: user_service.py
backend/app/utils/: init_celery.py  password_helper.py  security.py
backend/tests/unit/: test_crud_api.py
database/: init.sql
k8s/: backend.yaml  mysql-admin.yaml  mysql.yaml  rabbitmq.yaml  redis.yaml  worker.yaml
k8s/config-n-secrets/: backend-config-n-secret.yaml  mysql-admin-config-n-secret.yaml  mysql-config-n-secret.yaml  rabbitmq-config-n-secret.yaml  worker-config-n-secret.yaml
k8s/pv-n-pvc/: pv.yaml
