[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Fast API template"
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.16"
celery = "^5.3.0"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
