[tool.poetry]
name = "fastapi backend"
version = "0.1.0"
description = "Backend Application written in FastApi. Its a template for all FastApi Application."
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.16"
celery = "^5.3.1"
redis = "^4.5.5"
gunicorn = "^20.1.0"
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
